Added extra questions and logic for Lab 3

--- a/index.html
+++ b/index.html
@@ -139,6 +139,22 @@
                 </li>
             </ul>
         </section>
+        <section>
+            <h1>My Top Ten</h1>
+            <p>Ideas, Tools and Technologies</p>
+            <ol>
+                <li>.NET Core</li>
+                <li>Learning from Juniors</li>
+                <li>C#</li>
+                <li>CI/CD</li>
+                <li>Conferences</li>
+                <li>Code Reviews</li>
+                <li>Proper Scrum</li>
+                <li>Teaching new tech</li>
+                <li>Arduino Development</li>
+                <li>Non-code STEM</li>
+            </ol>
+        </section>
     </main>
 </body>
 
